<resources>
    <string name="app_name">My Fridge</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_recipe_detail">RecipeDetail</string>
    <string name="content_authority">com.example.jinyoon.a09capstoneproject</string>

    <string name="days_string">%1$d days</string>
    <string name="item_exist_msg">This item already exists in the list!!</string>
    <string name="basket_empty_msg">No item is available. Please add grocery item using fab button</string>
    <string name="item_added_msg">%1$s added to the list!</string>
    <string name="no_input_msg">Please enter grocery name</string>
    <string name="fridge_empty_msg">No item is available. Please add grocery item using fab button or move item from Basket List</string>
    <string name="fridge_dialog_name_text">Grocery Name :</string>
    <string name="fridge_dialog_days_text">Expected Days to Expiration :</string>
    <string name="fridge_dialog_name_hint">Input Grocery Name here</string>
    <string name="fridge_dialog_days_hint">Input days to expiration</string>
    <string name="no_days_input_msg">Please enter expected days to expiration</string>
    <string name="item_modified_msg">Item modified</string>
    <string name="recipe_empty_msg">No Recipes to show. Please add ingredients for your recipes using fab button</string>
    <string name="remove_msg">ITEM REMOVED</string>
    <string name="item_move_to_fridge_msg">ITEM MOVED TO FRIDGE LIST</string>
    <string name="title_widget_today">Basket List</string>
    <string name="widget_empty_view_text">No grocery item is available. Please add items in the app.</string>
    <string name="basket_dialog_title">Add Item to basket</string>
    <string name="basket_dialog_item_hint">Eggs</string>
    <string name="basket_dialog_negative_text">Cancel</string>
    <string name="basket_dialog_expiration_title">Enter expiration</string>
    <string name="basket_dialog_expiration_content">Enter expected days to expiration</string>
    <string name="basket_dialog_edit_tile">Edit Item</string>
    <string name="basket_dialog_edit_content">Edit Item name</string>
    <string name="fridge_dialog_title">Add item to fridge</string>
    <string name="fridge_dialog_negative_text">Cancel</string>
    <string name="fridge_dialog_positive_text">OK</string>
    <string name="fridge_dialog_edit_title">Edit Item</string>
    <string name="publisher_url_key">publisher_url</string>
    <string name="recipe_query_api_key_param">key</string>
    <string name="recipe_query_ingredient_param">q</string>
    <string name="notification_msg">Grocery in your fridge is about to expire. Click to check out recipes!</string>
    <string name="recipe_detail">recipe detail is shown in this screen</string>
    <string name="content_description_basket_fab">click this button to add item to basket list</string>
    <string name="content_description_fridge_fab">click this button to add item to fridge list</string>
    <string name="recipe_thumbnail">Click to see recipe</string>
    <string name="content_description_widget_title">widget is shown</string>
    <!--<string name="banner_ad_unit_id">ca-app-pub-4593645967569740/2964475319</string>-->
    <string name="banner_ad_unit_id">ca-app-pub-3940256099942544/6300978111</string>
    <string name="food2fork_attribution">Powered By Food2Fork.com</string>
    <string name="activity_from_notification_key" translatable="false">cameFromNotification</string>
    <string name="recipe_dialog_title">Pick indgredients you want to use</string>
    <string name="recipe_positive_text">Get Recipes</string>
    <string name="content_description_recipe_fab">Click to add ingredients you want to use</string>
    <string name="sharedpref_param_key">param</string>
    <string name="sharedpref_param_index_key">paramIndex</string>
    <string name="sharedpref_param_name_key">paramName</string>
    <string name="no_connection_msg">Please check your internet connection</string>
    <string name="recipe_no_param">Please select ingredients</string>


</resources>
