<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="vertical"
        android:layout_weight="1">

        <TextView
            android:id="@+id/fridge_dialog_name_display"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/list_item_textsize"
            android:text="@string/fridge_dialog_name_text"/>
        <EditText
            android:id="@+id/fridge_dialog_name_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:hint="@string/fridge_dialog_name_hint"
            android:textColorHint="@color/colorTertiaryText"
            />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="vertical"
        android:layout_weight="1">

        <TextView
            android:id="@+id/fridge_dialog_days_display"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/list_item_textsize"
            android:text="@string/fridge_dialog_days_text"/>
        <EditText
            android:id="@+id/fridge_dialog_days_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:hint="@string/fridge_dialog_days_hint"
            android:textColorHint="@color/colorTertiaryText"
            />
    </LinearLayout>

</LinearLayout>